<resources>
    <string name="app_name">ProjectBrain</string>
    <string name="e_mail">e-mail:</string>
    <string name="applogo">AppLogo</string>
    <string name="password">password:</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="forgot_password">forgot password?</string>
    <string name="search_icon">Search</string>
    <string name="search_users">search_users</string>
    <string name="search_users_hint">search users</string>
    <string name="app_label">Brain</string>
    <string name="idea_title">Idea Title</string>
</resources>